# hello-emoji

./: README.md  pyproject.toml
src/hello_emoji/: __init__.py  example.py
