[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "hello_emoji"
version = "0.0.3"
authors = [
  { name="Afiz", email="afizshaik@gmail.com" },
]
description = "Simple Hello emoji generator."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/afizs/hello-emoji"
"Bug Tracker" = "https://github.com/afizs/hello-emoji/issues"